Adding manga page (template and SCSS).

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -7,6 +7,7 @@ $font-color: #EEEEEE;
 $background: #222831;
 $foreground: #393E46;
 $blue-elem: #00ADB5;
+$bright-foreground: #EEEEEE33;
 
 body {
   background-color: $background;
